@@ -13,6 +13,7 @@
 - fix buffer size checks in get_network_proximity().
 - fix leak in get_network_proximity().
 - fix buffer size checks in merge_options().
+- check amd lex buffer len before copy.
 
 04/06/2014 autofs-5.1.0
 =======================
